--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,11 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+
+*~
+server/remote/*.txt
+server/tournament/*.txt
+server/opening/*.txt
+server/engine/*.zip
+server/result
